# docs/swagger.yaml
@@ -11,6 +11,10 @@ definitions:
     type: object
   models.Product:
     properties:
+      category_id:
+        type: integer
+      category_name:
+        type: string
       id:
         type: integer
       name:
