# models/product.go
@@ -5,4 +5,6 @@ type Product struct {
 	Name  string	`json:"name"`
 	Price int		`json:"price"`
 	Stock int		`json:"stock"`
+	CategoryID int	`json:"category_id"`
+	CategoryName string `json:"category_name,omitempty"`
 }
